add countdown timer

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,27 +6,14 @@
 </head>
 <body>
 <div>
-  <div id="timer"></div>
-  <script th:src="@{/js/timer.js}"></script>
-  <input type="button" value="Start" onclick="countdown()">
-  <input type="button" value="Stop" onclick="pause()">
-  <input type="button" value="Reset" onclick="reset()">
-  <div id="timer2"></div>
-  <div>
-    <span class="days"></span>
-    <div class="smalltext">Days</div>
-  </div>
-  <div>
-    <span class="hours"></span>
-    <div class="smalltext">Hours</div>
-  </div>
-  <div>
-    <span class="minutes"></span>
-    <div class="smalltext">Minutes</div>
-  </div>
-  <div>
-    <span class="seconds"></span>
-    <div class="smalltext">Seconds</div>
+  <div id="timer">
+    <div>
+      <span class="countdown"></span>
+    </div>
+    <input type="button" value="Start" onclick="start()">
+    <input type="button" value="Stop" onclick="pause()">
+    <input type="button" value="Reset" onclick="reset()">
+    <script th:src="@{/js/timer.js}"></script>
   </div>
 </div>
 </body>
