fix javascript code

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,7 +8,7 @@
 <div>
   <div id="timer">
     <div>
-      <span class="countdown"></span>
+      <span class="remaining"></span>
     </div>
     <input type="button" value="Start" onclick="start()">
     <input type="button" value="Stop" onclick="pause()">
