implement start/stop and reset button

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,8 +10,7 @@
     <div>
       <span class="remaining"></span>
     </div>
-    <input type="button" value="Start" onclick="start()">
-    <input type="button" value="Stop" onclick="pause()">
+    <input type="button" value="Start/Stop" onclick="startstop()">
     <input type="button" value="Reset" onclick="reset()">
     <script th:src="@{/js/timer.js}"></script>
   </div>
